# medstats-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
medstats/: cli.py  display.py  metrics.py
tests/: test_metrics.py
